--- a/public/index.html
+++ b/public/index.html
@@ -66,8 +66,26 @@
                 <li><a href="/lezione-4/lezione-4-5.html">4.5 - Mixins e Functions</a></li>
                 <li><a href="/lezione-4/lezione-4-6.html">4.6 - Extend e Placeholder</a></li>
                 <li><a href="/lezione-4/lezione-4-7.html">4.7 - Control Directives</a></li>
-                <li><a href="/lezione-4/lezione-4-8.html">4.8 - SASS Avanzato e Best Practices</a></li>
-                <li><a href="/lezione-4/lezione-4-99.html">Progetto Finale: Dashboard Moderna</a></li>
+                <li><a href="/lezione-4/lezione-4-99.html">Pagina di esempio</a></li>
+            </ul>
+        </div>
+
+        <div class="teoria">
+            <h3>Lezione 5 - JavaScript Moderno (ES6+)</h3>
+            <p>JavaScript moderno con ES6+ per preparazione a TypeScript e React</p>
+            <ul>
+                <li><a href="/lezione-5/index.html">Introduzione alla Lezione 5</a></li>
+                <li><a href="/lezione-5/lezione-5-1.html">5.1 - Introduzione e Setup</a></li>
+                <li><a href="/lezione-5/lezione-5-2.html">5.2 - Variabili e Tipi</a></li>
+                <li><a href="/lezione-5/lezione-5-3.html">5.3 - Operatori e Template Literals</a></li>
+                <li><a href="/lezione-5/lezione-5-4.html">5.4 - Strutture di Controllo e Ternary</a></li>
+                <li><a href="/lezione-5/lezione-5-5.html">5.5 - Cicli e Array Methods</a></li>
+                <li><a href="/lezione-5/lezione-5-6.html">5.6 - Funzioni e Arrow Functions</a></li>
+                <li><a href="/lezione-5/lezione-5-7.html">5.7 - Oggetti e Destructuring</a></li>
+                <li><a href="/lezione-5/lezione-5-8.html">5.8 - Array Avanzati e Spread Operator</a></li>
+                <li><a href="/lezione-5/lezione-5-9.html">5.9 - DOM Manipulation</a></li>
+                <li><a href="/lezione-5/lezione-5-10.html">5.10 - Moduli ES6 e JSON</a></li>
+                <li><a href="/lezione-5/lezione-5-99.html">5.99 - Progetto Finale: Todo List Modulare</a></li>
             </ul>
         </div>
 
@@ -75,6 +93,7 @@
             <h3>Risorse</h3>
             <ul>
                 <li><a href="/link-utili.html">Link Utili</a></li>
+                <li><a href="/funzionalita-avanzate-sass.html">Funzionalità Avanzate SASS</a></li>
             </ul>
         </div>
     </div>
