--- a/public/lezione-4/index.html
+++ b/public/lezione-4/index.html
@@ -133,20 +133,7 @@
                     </ul>
                 </td>
             </tr>
-            <tr>
-                <td>Parte 8: SASS Avanzato e Best Practices</td>
-                <td>
-                    <ul style="margin: 10px 0 0 20px;">
-                        <li>Maps e liste avanzate</li>
-                        <li>Color functions</li>
-                        <li>Math operations</li>
-                        <li>Interpolation</li>
-                        <li>Organizzazione codice</li>
-                        <li>Performance optimization</li>
-                        <li>CSS custom properties con SASS</li>
-                    </ul>
-                </td>
-            </tr>
+
             <tr>
                 <td>Progetto Finale</td>
                 <td>
@@ -176,10 +163,10 @@
             <p>Dopo aver installato Node.js, eseguire da terminale:</p>
             <div class="codice">
 <pre># Installazione globale di SASS
-npm install -g sass
+npm install sass
 
 # Verifica installazione
-sass --version</pre>
+npx sass --version</pre>
             </div>
         </div>
 
