--- a/public/lezione-4/lezione-4-4.html
+++ b/public/lezione-4/lezione-4-4.html
@@ -112,7 +112,7 @@ body {
         
         <div class="codice">
 <pre># Compila solo il file principale
-sass scss/main.scss css/main.css
+npx sass scss/main.scss css/main.css
 
 # I partials (_variables.scss, _reset.scss, etc.)
 # NON vengono compilati separatamente
