--- a/public/lezione-4/lezione-4-7.html
+++ b/public/lezione-4/lezione-4-7.html
@@ -563,10 +563,10 @@ $breakpoint-values: (576px, 768px, 992px, 1200px);
             
             <p><strong>⚠️ Attenzione:</strong></p>
             <ul>
-                <li>Loops grandi generano molto CSS (valuta tree-shaking/purge)</li>
+                <li>Loops grandi generano molto CSS</li>
                 <li>@while può causare loop infiniti se mal configurato</li>
                 <li>Non generare centinaia di classi inutilizzate</li>
-                <li>Usa PurgeCSS o simili per rimuovere CSS non usato in produzione</li>
+                <li>Genera solo le utility classes che utilizzi realmente</li>
             </ul>
         </div>
 
@@ -599,7 +599,7 @@ $breakpoint-values: (576px, 768px, 992px, 1200px);
             <a href="/lezione-4/lezione-4-6.html" class="btn-prev">← Lezione Precedente</a>
             <a href="/index.html" class="btn-home">Home</a>
             <a href="/link-utili.html" class="btn-link-utili">Link Utili</a>
-            <a href="/lezione-4/lezione-4-8.html" class="btn-next">Prossima Lezione →</a>
+            <a href="/lezione-4/lezione-4-99.html" class="btn-next">Progetto Finale →</a>
         </div>
     </div>
 </body>
