--- a/public/lezione-4/esempi/progetto-organizzato.html
+++ b/public/lezione-4/esempi/progetto-organizzato.html
@@ -4,216 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo 7-1 Pattern SASS</title>
-    <style>
-        /* Compiled from organized SASS architecture (7-1 Pattern) */
-        
-        /* abstracts/_variables.scss */
-        :root {
-            --primary: #3b82f6;
-            --secondary: #8b5cf6;
-            --text: #1e293b;
-            --text-light: #64748b;
-            --bg: #f8fafc;
-            --white: #ffffff;
-        }
-
-        /* base/_reset.scss */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        /* base/_typography.scss */
-        body {
-            font-family: system-ui, -apple-system, sans-serif;
-            line-height: 1.6;
-            color: var(--text);
-            background: var(--bg);
-        }
-
-        h1, h2, h3 {
-            font-weight: 600;
-            line-height: 1.2;
-        }
-
-        /* layout/_header.scss */
-        .header {
-            background: var(--primary);
-            color: var(--white);
-            padding: 1.5rem 2rem;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-        }
-
-        .header__container {
-            max-width: 1200px;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .header__title {
-            font-size: 1.5rem;
-        }
-
-        .header__nav {
-            display: flex;
-            gap: 2rem;
-            list-style: none;
-        }
-
-        .header__link {
-            color: var(--white);
-            text-decoration: none;
-            transition: opacity 0.3s;
-        }
-
-        .header__link:hover {
-            opacity: 0.8;
-        }
-
-        /* layout/_container.scss */
-        .container {
-            max-width: 1200px;
-            margin: 2rem auto;
-            padding: 0 2rem;
-        }
-
-        /* components/_button.scss */
-        .btn {
-            padding: 0.75rem 1.5rem;
-            border: none;
-            border-radius: 0.375rem;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s;
-        }
-
-        .btn--primary {
-            background: var(--primary);
-            color: var(--white);
-        }
-
-        .btn--primary:hover {
-            background: #2563eb;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 8px rgba(59,130,246,0.3);
-        }
-
-        .btn--secondary {
-            background: var(--secondary);
-            color: var(--white);
-        }
-
-        .btn--secondary:hover {
-            background: #7c3aed;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 8px rgba(139,92,246,0.3);
-        }
-
-        /* components/_card.scss */
-        .cards {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-            margin-bottom: 3rem;
-        }
-
-        .card {
-            background: var(--white);
-            border-radius: 0.5rem;
-            overflow: hidden;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-
-        .card:hover {
-            transform: translateY(-4px);
-            box-shadow: 0 12px 24px rgba(0,0,0,0.15);
-        }
-
-        .card__header {
-            height: 150px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        }
-
-        .card__body {
-            padding: 1.5rem;
-        }
-
-        .card__title {
-            font-size: 1.25rem;
-            margin-bottom: 0.75rem;
-        }
-
-        .card__text {
-            color: var(--text-light);
-            margin-bottom: 1rem;
-        }
-
-        /* components/_form.scss */
-        .form {
-            background: var(--white);
-            padding: 2rem;
-            border-radius: 0.5rem;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            max-width: 600px;
-        }
-
-        .form__title {
-            font-size: 1.5rem;
-            margin-bottom: 1.5rem;
-        }
-
-        .form__group {
-            margin-bottom: 1.5rem;
-        }
-
-        .form__label {
-            display: block;
-            margin-bottom: 0.5rem;
-            font-weight: 500;
-            color: var(--text);
-        }
-
-        .form__input {
-            width: 100%;
-            padding: 0.75rem;
-            border: 2px solid #e2e8f0;
-            border-radius: 0.375rem;
-            font-size: 1rem;
-            transition: border-color 0.3s;
-        }
-
-        .form__input:focus {
-            outline: none;
-            border-color: var(--primary);
-        }
-
-        .form__submit {
-            width: 100%;
-        }
-
-        /* layout/_footer.scss */
-        .footer {
-            background: var(--text);
-            color: var(--white);
-            padding: 2rem;
-            margin-top: 4rem;
-            text-align: center;
-        }
-
-        .footer__text {
-            color: #94a3b8;
-        }
-
-        /* utilities/_spacing.scss */
-        .mb-1 { margin-bottom: 0.5rem; }
-        .mb-2 { margin-bottom: 1rem; }
-        .mb-3 { margin-bottom: 1.5rem; }
-        .mb-4 { margin-bottom: 2rem; }
-    </style>
+    <link rel="stylesheet" href="progetto-organizzato.css">
 </head>
 <body>
     <header class="header">
