feat: add comprehensive .gitignore guide and final project workflow documentation

--- a/public/lezione-5/lezione-5-1.html
+++ b/public/lezione-5/lezione-5-1.html
@@ -405,19 +405,19 @@ const pulsanteInvio = document.querySelector('button');  // Più descrittivo</pr
             </ul>
         </div>
 
-        <h2>11. Preparazione per TypeScript e React</h2>
+        <h2>11. Best Practices per lo Sviluppo Moderno</h2>
         
         <div class="teoria">
             <p><strong>Perché iniziare con setup corretto è importante:</strong></p>
             <ul>
-                <li><strong>React usa JSX:</strong> Sintassi simile a HTML dentro JavaScript</li>
-                <li><strong>TypeScript richiede setup:</strong> Compila TypeScript in JavaScript</li>
-                <li><strong>Moduli ES6:</strong> React e TypeScript si basano su import/export</li>
-                <li><strong>DevTools:</strong> React ha estensioni browser dedicate</li>
-                <li><strong>Console:</strong> Fondamentale per debuggare componenti React</li>
+                <li><strong>Moduli ES6:</strong> Organizzare codice con import/export per progetti scalabili</li>
+                <li><strong>DevTools:</strong> Browser moderni offrono strumenti potenti per debugging</li>
+                <li><strong>Console:</strong> Fondamentale per testare e debuggare codice JavaScript</li>
+                <li><strong>Linter:</strong> Strumenti come ESLint aiutano a mantenere codice pulito</li>
+                <li><strong>Version Control:</strong> Git per tracciare modifiche e collaborare</li>
             </ul>
             
-            <p>Padroneggiare questi concetti base rende molto più semplice l'apprendimento di strumenti avanzati.</p>
+            <p>Padroneggiare questi concetti base rende molto più semplice l'apprendimento di framework e librerie moderne.</p>
         </div>
 
         <div class="navigazione">
