--- a/public/lezione-5/lezione-5-99.html
+++ b/public/lezione-5/lezione-5-99.html
@@ -198,7 +198,7 @@ async handleEditTodo(id) {
             </div>
         </div>
 
-        <div class="react-connection">
+        <div class="architecture-info">
             <h3>🎯 Architettura Moderna</h3>
             <p>Questa architettura segue i principi dello sviluppo moderno:</p>
             <ul>
