--- a/public/lezione-5/lezione-5-3.html
+++ b/public/lezione-5/lezione-5-3.html
@@ -667,7 +667,7 @@ function calculateWinner(squares) {
             <a href="/lezione-5/lezione-5-2.html" class="btn-prev">← Lezione Precedente</a>
             <a href="/index.html" class="btn-home">Home</a>
             <a href="/link-utili.html" class="btn-link-utili">Link Utili</a>
-            <a href="/lezione-5/lezione-5-99.html" class="btn-next">Progetto Finale →</a>
+            <a href="https://react.dev/learn/tutorial-tic-tac-toe" class="btn-next">Progetto Finale →</a>
         </div>
     </div>
 </body>
